--- a/src/components/products/product_list/product_list.module.css
+++ b/src/components/products/product_list/product_list.module.css
@@ -6,3 +6,9 @@
   padding: 0.3rem;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 50px 30px -20px;
 }
+
+.skeleton_block {
+  width: 185px;
+  height: 24px;
+  border-radius: 0.5rem;
+}
