--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   height: 80px;
-  background-color: #f8f9fa;
+  background-color: #f8f9faeb;
   display: flex;
   align-items: center;
   justify-content: space-between;
