--- a/src/components/products/product_search/product_search.module.css
+++ b/src/components/products/product_search/product_search.module.css
@@ -13,16 +13,16 @@
   width: 48px;
   height: 44px;
   background-color: var(--primary);
-  border-radius: 0rem 1.4rem 1.4rem 0rem;
+  border-radius: 0rem 0.7rem 1.4rem 0rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  cursor: pointer;
+  /* cursor: pointer; */
   transition: background-color 0.3s ease, border-color 0.3s ease;
   color: #ffff;
 }
 
-.search_btn:hover {
+/* .search_btn:hover {
   background-color: var(--primary-foreground);
   border-color: var(--primary-foreground);
-}
+} */
